
XXX
(Horms)
   * XXX
   - Fixed capability command for POP3S
   - Minor updates to databse documentation for MySQL and ODBC
   - Flags should now work correcly in the debian init script.
     Kilian Cavalott
   - Fixed segmentation fault when using the query_key option
     with end-users whose usernames are more than 32 characters long.

----------------------------------------------------------------------

26th March 2003
(Horms)
   * 1.11beta7
   - Cleaned up imap4_write to not used returned local variables.
   - Show version when logging options
   - format string corretly handles username and domain when
     no domain_delimter is supplied by the end-user. Evan Moore.
   - Logger is reoppened on SIGHUP. This is particularly useful
     perdition is logging to a file.
   - Compliation of each database library may be disabled 
     using configure
   - Fixed minor SSL include path problem. Bo Bendtsen
   - Fixed minor documentation error in SSL crt and key files

----------------------------------------------------------------------

12th February 2003
(Horms)
   * 1.11beta5
   - Return correct tag for server_ok_line
     broke somewhere in the 1.11beta series

----------------------------------------------------------------------

7th February 2003
(Horms)
   * 1.11beta4
   - Updated configure.in's download references
   - Fixed bug in server_ok_line option that caused
     connections to fail. Found by Marc Langer

----------------------------------------------------------------------

10th January 2003
(Horms)
   * 1.11beta3
   - Improved handling of real-server certificate validation.
     Don Kozlowski and Myself
   - Cleaned up build when compiled without SSL

----------------------------------------------------------------------

8th January 2003
(Horms)
   * 1.11beta2
   - Fixed handling of POP3 CAPA command
   - Cleaned up perditiondb(5) man page
   - Fixed packaging

----------------------------------------------------------------------
